refactor: extract constants, Java 21 modernizations, switch expressions, fix executor leak
- EntryDataJsonAdapter: extract 20 KEY_* constants for duplicate JSON field names,
  convert serialize() if-chain to switch expression
- CopilotClient: .collect(Collectors.toList()) → .toList() (3 locations),
  extract KEY_MCP_SERVERS/AGENT_SLUG_EXPLORE/AGENT_SLUG_EDIT constants,
  fix Javadoc blank line (add <p> tag)
- ActiveAgentManager: Math.max/min → Math.clamp (Java 21)
- ContentBlockSerializer: if/else-if instanceof → switch expression
- ChatWebServer: store ExecutorService as field, shut down in stop() (S2095)
- ClaudeCliExporter: extract ROLE_ASSISTANT, CONTENT_TYPE_TOOL_USE,
  STOP_REASON_END_TURN constants
- OpenCodeClientExporter: extract FIELD_INPUT constant

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>