@@ -25,7 +25,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.TimeoutException;
-import java.util.stream.Collectors;
 
 /**
  * GitHub Copilot ACP client.
@@ -53,6 +52,9 @@ public final class CopilotClient extends AcpClient {
     private static final String MCP_TYPE_HTTP = "http";
     private static final String KEY_RAW_INPUT = "rawInput";
     private static final String SESSION_STATE_DIR = "session-state";
+    private static final String KEY_MCP_SERVERS = "mcpServers";
+    private static final String AGENT_SLUG_EXPLORE = "intellij-explore";
+    private static final String AGENT_SLUG_EDIT = "intellij-edit";
 
     // ─── MCP tool sets ───────────────────────────────
 
@@ -64,7 +66,7 @@ public final class CopilotClient extends AcpClient {
             .filter(t -> !t.isBuiltIn())
             .map(ToolDefinition::id)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -75,7 +77,7 @@ public final class CopilotClient extends AcpClient {
             .filter(t -> !t.isBuiltIn() && t.kind() == ToolDefinition.Kind.READ)
             .map(ToolDefinition::id)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -87,7 +89,7 @@ public final class CopilotClient extends AcpClient {
                 && (t.kind() == ToolDefinition.Kind.READ || t.kind() == ToolDefinition.Kind.EDIT))
             .map(ToolDefinition::id)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -125,7 +127,7 @@ public final class CopilotClient extends AcpClient {
         writeAgentDefinitions(home.toString());
         String basePath = project.getBasePath();
         if (basePath != null) {
-            Set<String> builtInSlugs = Set.of(DEFAULT_AGENT_SLUG, "intellij-explore", "intellij-edit");
+            Set<String> builtInSlugs = Set.of(DEFAULT_AGENT_SLUG, AGENT_SLUG_EXPLORE, AGENT_SLUG_EDIT);
             ProjectAgentScanner.copyToGlobalAgentsDir(Path.of(basePath), home.resolve("agents"), builtInSlugs);
         }
         mergeMcpConfig(home, mcpPort);
@@ -154,15 +156,15 @@ public final class CopilotClient extends AcpClient {
         List<AbstractAgentClient.AgentMode> agents = new ArrayList<>(List.of(
             new AbstractAgentClient.AgentMode(DEFAULT_AGENT_SLUG, "Intellij-Default",
                 "Full IntelliJ toolset with abuse-detection instructions"),
-            new AbstractAgentClient.AgentMode("intellij-explore", "Intellij-Explore",
+            new AbstractAgentClient.AgentMode(AGENT_SLUG_EXPLORE, "Intellij-Explore",
                 "Read-only code navigation, no file edits or shell execution"),
-            new AbstractAgentClient.AgentMode("intellij-edit", "Intellij-Edit",
+            new AbstractAgentClient.AgentMode(AGENT_SLUG_EDIT, "Intellij-Edit",
                 "Focused editing and refactoring tools, no system shell")
         ));
 
         String basePath = project.getBasePath();
         if (basePath != null) {
-            Set<String> builtInSlugs = Set.of(DEFAULT_AGENT_SLUG, "intellij-explore", "intellij-edit");
+            Set<String> builtInSlugs = Set.of(DEFAULT_AGENT_SLUG, AGENT_SLUG_EXPLORE, AGENT_SLUG_EDIT);
             agents.addAll(ProjectAgentScanner.scanProjectAgents(Path.of(basePath), builtInSlugs));
         }
 
@@ -264,7 +266,7 @@ public final class CopilotClient extends AcpClient {
 
         JsonArray servers = new JsonArray();
         servers.add(server);
-        params.add("mcpServers", servers);
+        params.add(KEY_MCP_SERVERS, servers);
     }
 
     // ─── Mode selection ──────────────────────────────
@@ -305,7 +307,7 @@ public final class CopilotClient extends AcpClient {
      * the spec-compliant {@code arguments} field. Fall back to {@code rawInput} if
      * {@code arguments} is absent.
      *
-     * <b>Why extracted:</b> This is a Copilot-specific deviation from the ACP spec.
+     * <p><b>Why extracted:</b> This is a Copilot-specific deviation from the ACP spec.
      * Other clients use the standard {@code arguments} field provided by the base class.
      */
     @Override
@@ -410,13 +412,13 @@ public final class CopilotClient extends AcpClient {
         } else {
             root = new JsonObject();
         }
-        if (!root.has("mcpServers") || !root.get("mcpServers").isJsonObject()) {
-            root.add("mcpServers", new JsonObject());
+        if (!root.has(KEY_MCP_SERVERS) || !root.get(KEY_MCP_SERVERS).isJsonObject()) {
+            root.add(KEY_MCP_SERVERS, new JsonObject());
         }
         JsonObject entry = new JsonObject();
         entry.addProperty("type", MCP_TYPE_HTTP);
         entry.addProperty("url", "http://localhost:" + mcpPort + "/mcp");
-        root.getAsJsonObject("mcpServers").add(MCP_SERVER_NAME, entry);
+        root.getAsJsonObject(KEY_MCP_SERVERS).add(MCP_SERVER_NAME, entry);
         Files.createDirectories(configPath.getParent());
         Files.writeString(configPath, root.toString(), StandardCharsets.UTF_8);
     }
